# eassistant

./: .coverage  .gitignore  .pre-commit-config.yaml  .roomodes  README.md  debug_web_ui.md  project.todo.json  pyproject.toml  shell.py
.github/workflows/: ci.yml
.roo/rules/: 01-general.txt
config/: default.yaml
docs/: Architectural_Plan.md  Chatbot_Architecture_Refactor_Summary.md  Design.md  Project_Status_Summary.md  guardrails.md
docs/adr/: 001-state-aware-conversational-routing.md  002-conversational-storage-target.md  003-web-api-and-ui-architecture.md  004-database-backed-state-persistence.md
eassistant/: config.py
eassistant/graph/: builder.py
services/api/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
services/ui/: .env.example  Dockerfile  cloudbuild.yaml  manage.py  requirements.txt
services/ui/chat/: apps.py  tests.py  views.py
services/ui/chat/templates/chat/: index.html
services/ui/eassistant_ui/: asgi.py  settings.py  urls.py  wsgi.py
src/eassistant/: cli.py  config.py  models.py
src/eassistant/graph/: builder.py  nodes.py  state.py
src/eassistant/services/: llm.py  storage.py
src/eassistant/utils/: files.py
tests/: smoke_test.py  test_cli.py  test_config.py
tests/graph/: test_core_pipeline.py  test_nodes.py
tests/services/: test_llm.py  test_storage.py
tests/utils/: test_files.py
