[project]
name = "eassistant"
version = "0.1.0"
description = "Conversational Email Assistant"
authors = [{ name = "Roo", email = "roo@example.com" }]
dependencies = [
    "langgraph",
    "pydantic",
    "typer",
    "rich",
    "boto3",
    "pydantic-settings",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["eassistant"]

[tool.black]
line-length = 88

[tool.ruff]
lint.select = ["E", "F", "W", "I"]

[tool.mypy]
# By default, mypy is not strict
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = [
    "src/eassistant",
    "tests"
]
exclude = [
    "\\.venv",
    "src/eassistant/notebooks"
]
follow_imports = "skip"
# We enable strict checking for specific modules that are fully typed
overrides = [
    { module = "eassistant.graph.state", strict = true },
]