[project]
name = "eassistant"
version = "0.1.0"
description = "Conversational Email Assistant"
authors = [{ name = "Roo", email = "roo@example.com" }]
dependencies = [
    "langgraph",
    "pydantic",
    "typer",
    "rich",
    "boto3",
    "pydantic-settings",
    "pypdf",
    "reportlab",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "moto[s3]",
    "boto3-stubs[s3]",
    "types-fastapi",
]

[project.scripts]
eassistant = "eassistant.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["eassistant"]

[tool.black]
line-length = 88

[tool.ruff]
lint.select = ["E", "F", "W", "I"]

[tool.mypy]
# By default, mypy is not strict
strict = false
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
files = [
    "src/eassistant",
    "tests",
    "services"
]
exclude = [
    "\\.venv",
    "src/eassistant/notebooks",
    "build"
]
follow_imports = "silent"
# We enable strict checking for specific modules that are fully typed
overrides = [
    { module = "fastapi", ignore_missing_imports = true },
    { module = "eassistant.graph.state", strict = true },
    { module = "eassistant.models", strict = true },
    { module = "tests.*", strict = false, ignore_errors = true },
    { module = "services.*", strict = false },
]

[tool.pydantic-mypy]
init_for_subclass = true